[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "metanorm"
description = "Normalizing tool for Geospatial metadata"
readme = "README.md"
authors = [
    {name = "Adrien Perrin", email = "adrien.perrin@nersc.no"},
    {name = "Arash Azamifard"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
requires-python = ">=3.7"
dependencies = [
    "shapely>=1.6.0",
]
urls = {Repository = "https://github.com/nansencenter/metanorm"}
dynamic = ["version"]

[tool.setuptools]
packages = ["metanorm"]
